opa-kubernetes/02-resource-limit/pod-invalid.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-limit
  labels:
    team: devops
spec:
  containers:
    - name: nginx
      image: nginx:1.25
      resources: {}
